charts/lingarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lingarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lingarr.batsworks.com.br
      secretName: lingarr-tls
  rules:
    - host: lingarr.batsworks.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lingarr
                port:
                  number: 7765
